--- a/shorturl/templates/base.html
+++ b/shorturl/templates/base.html
@@ -7,7 +7,7 @@ $def with(content)
     <title>$content.title</title>
 　　<meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" meida="screen" href="/static/main.css" />
-    <meta name="description" content="A simple URL Shortener, powered by python and web.py." />
+    <meta name="description" content="" />
   </head>
   <body>
 
@@ -15,8 +15,5 @@ $def with(content)
 
     <script src="/static/qrcode.js"></script>
     <script src="/static/main.js"></script>
-    <div id="footer">
-      <!--<span>&copy;2012-2013 mozillazg</span>-->
-      <span id="source-code"><a href="https://github.com/mozillazg/ShortURL">Source Code</a></span></div>
   </body>
 </html>
